--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aigentic | AI & Automation Specialists</title>
+    <title>Aigentic | Self-Learning Lead Generation AI</title>
     <meta
       name="description"
-      content="Aigentic builds tailored AI and automation solutions that streamline operations and accelerate growth."
+      content="Stop building lists. Start building a lead engine. AI agents that find, score, and maintain high-quality leads automatically."
     />
-    <link rel="stylesheet" href="styles.css?v=6" />
+    <link rel="stylesheet" href="styles.css?v=8" />
     <link rel="icon" type="image/svg+xml" href="assets/Aigentic Logo.svg" />
   </head>
   <body>
@@ -33,58 +33,52 @@
     <main>
       <section class="hero">
         <div class="hero-copy">
-          <span class="badge">AI &amp; Automation Specialists</span>
-          <h1>Intelligent automation that unlocks growth</h1>
+          <span class="badge">Self-Learning Lead Generation</span>
+          <h1>Stop building lists. Start building a lead engine.</h1>
           <p>
-            We design, build, and maintain AI-powered automations that give your teams more
-            time to focus on high-impact work. From strategy to deployment, Aigentic helps
-            you deliver faster customer experiences and resilient operations.
+            We build self-learning AI agents that find your ideal customers, filter for high-quality contacts, and keep your prospect database fresh and accurate—automatically.
           </p>
           <div class="hero-actions">
-            <a class="primary-link" href="contact.html">Schedule a consultation</a>
-            <a class="secondary-link" href="contact.html">Share your project goals</a>
+            <a class="primary-link" href="contact.html">See how it works</a>
+            <a class="secondary-link" href="contact.html">Book a demo</a>
           </div>
         </div>
 
         <aside class="hero-card">
-          <h2>What we deliver</h2>
+          <h2>The Autonomous Lead-Gen Agent</h2>
           <ul>
             <li>
-              <strong>AI strategy sprints</strong>
-              <span>Identify quick wins and long-term automation opportunities.</span>
+              <strong>Natural language targeting</strong>
+              <span>Just describe your ideal customer. AI handles the complex search logic.</span>
             </li>
             <li>
-              <strong>Custom automation builds</strong>
-              <span>Launch bespoke workflows tailored to your existing tools and data.</span>
+              <strong>Intelligent quality scoring</strong>
+              <span>Auto-filters generic emails and low-confidence leads. Only sends qualified prospects.</span>
             </li>
             <li>
-              <strong>Ongoing optimisation</strong>
-              <span>Continuously improve performance with proactive monitoring and support.</span>
+              <strong>30-day freshness guarantee</strong>
+              <span>Automatically refreshes stale data and enriches incomplete records.</span>
             </li>
           </ul>
         </aside>
       </section>
 
       <section class="section">
-        <h2>Focused on outcomes that matter</h2>
+        <h2>Not a scraper. A living lead generation system.</h2>
         <p>
-          Aigentic pairs deep process knowledge with advanced AI capabilities to deliver
-          measurable results. Whether you need to automate customer journeys, streamline
-          internal operations, or launch new intelligent services, we make sure the solution
-          fits your business and scales with demand.
+          Our AI agents don't just find leads—they learn what converts. Every reply, every meeting booked feeds back into the system, making your targeting smarter over time. The result? A self-improving engine that delivers higher quality leads month after month.
         </p>
 
         <div class="pill-row">
-          <span class="pill">Process automation</span>
-          <span class="pill">AI copilots</span>
-          <span class="pill">Data orchestration</span>
-          <span class="pill">Customer experience automation</span>
-          <span class="pill">Analytics &amp; insights</span>
+          <span class="pill">AI-powered enrichment</span>
+          <span class="pill">Smart deduplication</span>
+          <span class="pill">Quality-first filtering</span>
+          <span class="pill">Self-learning feedback loops</span>
+          <span class="pill">Persistent lead database</span>
         </div>
 
         <div class="coming-soon">
-          <strong>Coming soon:</strong> An AI-powered assistant to guide visitors through
-          our services and answer questions in real time.
+          <strong>What's included:</strong> We handle everything from AI strategy to deployment, monitoring, and continuous optimisation. Your lead engine gets smarter whilst you focus on closing deals.
         </div>
       </section>
     </main>
